docs: edited swagger
