# app/internal/delivery/http/v1/seat.go
@@ -27,6 +27,14 @@ type updateSeatInput struct {
 	Title string `json:"title" binding:"required"`
 }
 
+// @Tags Store Seats
+// @Description Create seat
+// @Accept json
+// @Param data body createSeatInput true "JSON data"
+// @Param store_id path string true "Store Id"
+// @Produce json
+// @Success 200 {boolean} result
+// @Router /stores/{store_id}/seats [post]
 func (h *Handler) createSeat(c *gin.Context) {
 	var inp createSeatInput
 	storeId := c.Param("store_id")
@@ -49,6 +57,15 @@ func (h *Handler) createSeat(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, true)
 }
 
+// @Tags Store Seats
+// @Description Update seat
+// @Accept json
+// @Param data body updateSeatInput true "JSON data"
+// @Param store_id path string true "Store Id"
+// @Param seat_id path int true "Seat Id"
+// @Produce json
+// @Success 200 {boolean} result
+// @Router /stores/{store_id}/seats/{seat_id} [patch]
 func (h *Handler) updateSeat(c *gin.Context) {
 	var inp updateSeatInput
 	storeId := c.Param("store_id")
@@ -78,6 +95,13 @@ func (h *Handler) updateSeat(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, true)
 }
 
+// @Tags Store Seats
+// @Description Delete seat
+// @Param store_id path string true "Store Id"
+// @Param seat_id path int true "Seat Id"
+// @Produce json
+// @Success 200 {boolean} result
+// @Router /stores/{store_id}/seats/{seat_id} [delete]
 func (h *Handler) deleteSeat(c *gin.Context) {
 	storeId := c.Param("store_id")
 	seatIdStr := c.Param("seat_id")
@@ -95,6 +119,13 @@ func (h *Handler) deleteSeat(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, true)
 }
 
+// @Tags Store Seats
+// @Description Get all seats by store id
+// @Param store_id path string true "Store Id"
+// @Param seat_id path int true "Seat Id"
+// @Produce json
+// @Success 200 {array} domain.Seat
+// @Router /stores/{store_id}/seats [get]
 func (h *Handler) getAllSeatsByStoreId(c *gin.Context) {
 	storeId := c.Param("store_id")
 
